bugfix: gforce 214 improve floating modal z-index

--- a/src/packages/gnetwork-ui/components/organisms/modals/floating-modal/floating-modal.module.css
+++ b/src/packages/gnetwork-ui/components/organisms/modals/floating-modal/floating-modal.module.css
@@ -3,5 +3,10 @@
   font-family: inherit;
   outline: none;
   position: fixed;
-  z-index: 9999;
+  z-index: 999999;
+}
+
+.base > * {
+  position: relative;
+  z-index: 999999;
 }
